--- a/set.env
+++ b/set.env
@@ -1,4 +1,4 @@
-PREFIX=¥
+PREFIX=.
 AUTO_READ_STATUS=yes
 AUTO_DOWNLOAD_STATUS=no
 PM_PERMIT=no
@@ -6,7 +6,7 @@ BOT_NAME=Zokou-MD
 BOT_MENU_LINKS=LUFFY
 PUBLIC_MODE=no
 HEROKU=no
-OWNER_NAME=Kelish++
+OWNER_NAME=🐺⃟𝓛𝓮𝓶𝓶𝓲𝓷𝓰𝓼 𝓗𝓸𝓵𝓶𝓮𝓼[🐺]
 NUMERO_OWNER=22898028975
 WARN_COUNT=3
 STARTING_BOT_MESSAGE=yes
